ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTPS":443}]

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:813592692089:certificate/129efc87-e13c-43cd-b8f0-5dadd64065e9

spec:
  rules:
  - host: a657c657b0ad74f6f86aead309a623ab-2128795814.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80

    paths:
      - path: /php
        pathType: Prefix
        backend:
          service:
            name: php-service
            port:
              number: 80
